subprojects {
    apply plugin: 'java'

    sourceSets {
        main {
            java {
                srcDirs = ['src']
            }
        }
        test {
            java {
                srcDirs = ['src']
            }
        }
    }

    tasks.withType(JavaCompile).forEach{
        it.options.encoding = "UTF-8"
    }

    group 'java-base'
    version '1.0-SNAPSHOT'

    sourceCompatibility = 1.8

    repositories {
        mavenCentral()
        maven {
            url "https://github.com/csu-java-courses/repo/raw/master/"
        }
    }

    dependencies {
        compile group: 'junit', name: 'junit', version: '4.12'
        compile group: 'org.assertj', name: 'assertj-core', version: '3.10.0'
        compile group: 'org.example', name: 'code-check', version: '1.1'
    }
}
